--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "A geolocator using lat long for any use case",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "test-finder"
+    "test": "test-finder",
+    "dev": "node index.js",
+    "build": "node index.js"
   },
   "repository": {
     "type": "git",
